fix visual bug where when right side panel is too large and needs to scroll, only the panel scrolls and not the entire view. Still have to confirm the left panel will scroll independently as well

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,2 +1,13 @@
 @import "tailwindcss";
 @plugin "daisyui";
+
+html,
+body {
+    height: 600px;
+    width: 800px;
+}
+
+#root {
+    height: 100%;
+    width: 100%;
+}
